--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,3 +22,13 @@
 @import './cmps/app-header.css';
 
 @import './apps/mail/cmps/mail-list.css';
+@import './apps/mail/cmps/mail-filter.css';
+@import './apps/mail/cmps/mail-preview.css';
+
+@import './apps/note/views/mail-index.css';
+
+@import './apps/note/cmps/note-list.css';
+@import './apps/note/cmps/note-filter.css';
+@import './apps/note/cmps/note-preview.css';
+
+@import './apps/note/views/note-index.css';
