--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -19,7 +19,19 @@ a {
 }
 
 img {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     object-fit: cover;
 }
+
+button {
+    width: 35px;
+    /* height: 57px; */
+    border: none;
+    background-color: transparent;
+    border-radius: 10px;
+    font-family: montserrat-bold, serif;
+    font-size: 1.2rem;
+    margin: 6px;
+}
+
