--- a/assets/css/apps/note/cmps/note-list.css
+++ b/assets/css/apps/note/cmps/note-list.css
@@ -1,3 +1,12 @@
+.note-list button {
+    width: 35px;
+    border: none;
+    background-color: transparent;
+    border-radius: 10px;
+    font-family: montserrat-bold, serif;
+    font-size: 1.2rem;
+    margin: 6px;
+}
 .note-list ul{
     list-style: none;
     display: grid;
