--- a/assets/css/apps/note/cmps/note-add.css
+++ b/assets/css/apps/note/cmps/note-add.css
@@ -1,9 +1,20 @@
-.note-filter {
+.note-add button {
+    width: 35px;
+    border: none;
+    background-color: transparent;
+    border-radius: 10px;
+    font-family: montserrat-bold, serif;
+    font-size: 1.2rem;
+    margin: 6px;
+}
+
+.note-add {
 display: flex;
 justify-content: center;
 align-items: center;
 }
-.note-filter input {
+
+.note-add input {
     padding: 1em;
     background-color: aliceblue;
     border: none;
