--- a/assets/css/apps/mail/cmps/mail-preview.css
+++ b/assets/css/apps/mail/cmps/mail-preview.css
@@ -19,7 +19,8 @@
 .mail-preview button {
     border: none;
     cursor: pointer;
-    width: 100px;
+    width: 50px;
+    height: 50px;
     margin-inline-end: 10px;
     border-radius: 5px;
     background-color: red;
