--- a/assets/css/apps/note/cmps/note-add.css
+++ b/assets/css/apps/note/cmps/note-add.css
@@ -14,6 +14,12 @@ justify-content: center;
 align-items: center;
 }
 
+.note-add .btns-container{
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
 .note-add input {
     padding: 1em;
     background-color: whitesmoke;
@@ -22,11 +28,9 @@ align-items: center;
     font-family: lato, sans-serif;
     font-size: 1em;
     width: 45%;
+    outline-color: whitesmoke;
+    outline-width: 0;
 }
-/* .note-add input:focus {
-    border: none; 
-} */
-
 
 .main-input {
 background-color: whitesmoke;
