--- a/assets/css/apps/note/cmps/note-preview.css
+++ b/assets/css/apps/note/cmps/note-preview.css
@@ -1,11 +1,17 @@
 .note-preview {
-    padding: 10px;
-    box-shadow: 0 0 10px 0 gray;
+    padding-inline-start: 35px;
+    padding-inline-end: 10px;
+    padding-block-start: 10px;
+    /* box-shadow: 0 0 10px 0 gray; */
+    border: 1px solid lightgray;
     border-radius: 10px;
     margin-bottom: 15px;
     min-height: 120px;
+    position: relative;
+    flex-direction: column;
 }
 
 .note-todos button {
-    font-size: 1.2rem;
+    font-size: 1em;
 }
+
