--- a/assets/css/apps/note/cmps/note-add.css
+++ b/assets/css/apps/note/cmps/note-add.css
@@ -22,18 +22,18 @@ align-items: center;
 
 .note-add input {
     padding: 1em;
-    background-color: whitesmoke;
+    background-color: white;
     border: none;
     border-radius: 10px;
     font-family: lato, sans-serif;
     font-size: 1em;
     width: 45%;
-    outline-color: whitesmoke;
+    outline-color: white;
     outline-width: 0;
 }
 
 .main-input {
-background-color: whitesmoke;
+background-color: white;
 box-shadow: 0 0 10px 0 gray;
 border-radius: 10px;
 margin-block: 10px;
