--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -1,5 +1,5 @@
 body {
-    background-color: whitesmoke;
+    background-color: white;
     font-family: lato, sans-serif;
     margin: 0;
 }
@@ -19,7 +19,7 @@ a {
 }
 
 img {
-    max-height: 300px;
+    max-height: 230px;
     width: 100%;
     object-fit: cover;
 }
