--- a/assets/css/apps/note/cmps/note-preview.css
+++ b/assets/css/apps/note/cmps/note-preview.css
@@ -32,3 +32,10 @@
     bottom: 25px;
     z-index: 10;
 }
+
+.video-play iframe {
+    position: relative; 
+    height: auto; 
+    width: 100%;    
+    height: 100%;    
+}
