--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,5 +27,6 @@
 
 
 @import './apps/note/cmps/note-list.css';
+@import './apps/note/cmps/note-filter.css';
 @import './apps/note/cmps/note-add.css';
 @import './apps/note/cmps/note-preview.css';
