--- a/assets/css/apps/mail/cmps/mail-preview.css
+++ b/assets/css/apps/mail/cmps/mail-preview.css
@@ -5,21 +5,34 @@
 .mail-preview .mail-preview-div {
     gap: 20px;
     background-color: aliceblue;
-    margin-block-end: 5px;
+    /* margin-block-end: 5px; */
     cursor: pointer;
-    height: 100px;    
+    height: 100px;
+    outline: 1px solid gray   
 }
 
-.mail-preview .mail-preview-div>*:not(div.mail-body):not(button) {
-    width: 200px;
+.mail-preview .mail-preview-div:hover {
+    box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+}
+
+.mail-preview .mail-preview-div>*:not(div.mail-body) {
+    width: 300px;
 }
 
 .mail-preview-div div.mail-body {
     flex-grow: 1;
+    /* text-overflow: ellipsis; */
+    /* overflow: hidden; */
+    /* white-space: nowrap; */
+}
+
+.mail-preview-div div.mail-body.long-body {
+    /* flex-grow: 1; */
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
 }
+
 
 .mail-preview div.mail-from {
     margin-inline-start: 15px;
@@ -29,12 +42,18 @@
     font-weight: bold;
 }
 
-.mail-preview button {
+.mail-preview .remove-mail-container button {
     border: none;
     cursor: pointer;
     width: 30px;
     height: 30px;
     margin-inline-end: 10px;
-    border-radius: 5px;
-    background-color: red;
+    border-radius: 50%;
+    background-color: transparent;
+    /* visibility: hidden; */
+}
+
+.mail-preview .remove-mail-container button:hover{
+    visibility: visible;
+    box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
 }
