--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -1,6 +1,6 @@
 header {
-    background: lightcyan;
-    border-bottom: 2px solid white;
+    background: white;
+    border-bottom: 1px solid lightgray;
 }
 
 .app-header {
