--- a/assets/css/apps/mail/cmps/mail-preview.css
+++ b/assets/css/apps/mail/cmps/mail-preview.css
@@ -5,8 +5,9 @@
 .mail-preview .mail-preview-div {
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    background-color: aliceblue;
+    gap: 15px;
+    background-color: rgba(0,0,0,0.09);
+    color: #202124;
     /* margin-block-end: 5px; */
     cursor: pointer;
     height: 100px;
@@ -17,10 +18,6 @@
     box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
 }
 
-.mail-preview .mail-preview-div>*:not(div.mail-body) {
-    /* width: 300px; */
-}
-
 .mail-preview-div div.mail-body {
     flex-grow: 1;
     /* text-overflow: ellipsis; */
@@ -28,7 +25,7 @@
     /* white-space: nowrap; */
 }
 
-.mail-preview-div div.mail-body.long-body {
+.long-txt {
     /* flex-grow: 1; */
     text-overflow: ellipsis;
     overflow: hidden;
@@ -48,7 +45,7 @@
     border: none;
     cursor: pointer;
     width: 30px;
-    /* height: 30px; */
+    height: 30px;
     margin-inline-end: 10px;
     border-radius: 50%;
     background-color: transparent;
