--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,7 @@
 @import './apps/mail/cmps/mail-filter.css';
 @import './apps/mail/cmps/mail-preview.css';
 @import './apps/mail/cmps/mail-details.css';
+@import './apps/mail/cmps/mail-inbox.css';
 
 
 @import './apps/note/cmps/note-list.css';
