--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -4,9 +4,22 @@ header {
 }
 
 .app-header {
+    position: relative;
     display: flex;
     justify-content: space-between;
     padding: 20px 0;
+}
+
+nav {
+    position: fixed;
+    flex-direction: column;
+   
+    
+
+    background-color: var(--clr1);
+    width: 100%;
+    top: 66px;
+    z-index: 20;
 }
 
 nav a {
@@ -22,3 +35,30 @@ nav a.active {
     font-weight: bold;
     text-decoration: overline;
 }
+
+.app-header button {
+    border: none;
+    background-color: transparent;
+}
+.app-header h1 {
+    font-size: 1.8em;
+}
+.app-header .A {
+    color: rgb(41, 145, 225); 
+}
+.app-header .p1 {
+    color: red; 
+}
+.app-header .p {
+    color: rgb(243, 213, 42); 
+}
+.app-header .s {
+    color: rgb(41, 145, 225); 
+}
+.app-header .u {
+    color: rgb(8, 177, 8); 
+}
+.app-header .s {
+    color: red; 
+}
+
