--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,7 @@
 @import './apps/mail/cmps/mail-details.css';
 
 
+@import './apps/note/cmps/color-palette.css';
 @import './apps/note/cmps/note-list.css';
 @import './apps/note/cmps/note-filter.css';
 @import './apps/note/cmps/note-add.css';
