--- a/assets/css/setup/fonts.css
+++ b/assets/css/setup/fonts.css
@@ -17,3 +17,13 @@
     font-family: lato-x-bold;
     src: url('../../fonts/Lato-Black.ttf');
 }
+
+@font-face {
+    font-family: eurof55;
+    src: url('../../fonts/eurof55.ttf');
+}
+
+@font-face {
+    font-family: eurof75;
+    src: url('../../fonts/eurof75.ttf');
+}
