--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,3 +33,26 @@
 @import './apps/note/cmps/note-filter.css';
 @import './apps/note/cmps/note-add.css';
 @import './apps/note/cmps/note-preview.css';
+
+/* book */
+/* Setup */
+
+@import './apps/miss-book/assets/css/setup/variables.css';
+@import './apps/miss-book/assets/css/setup/fonts.css';
+
+/* Basics */
+
+@import './apps/miss-book/assets/css/basics/base.css';
+@import './apps/miss-book/assets/css/basics/helpers.css';
+@import './apps/miss-book/assets/css/basics/layout.css';
+
+/* Pages */
+@import './apps/miss-book/assets/css/pages/book-details.css';
+
+/* Cmps */
+@import './apps/miss-book/assets/css/cmps/app-header.css';
+@import './apps/miss-book/assets/css/cmps/book-list.css';
+@import './apps/miss-book/assets/css/cmps/book-preview.css';
+@import './apps/miss-book/assets/css/cmps/book-filter.css';
+@import './apps/miss-book/assets/css/cmps/review-add.css';
+
