--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,7 @@
 @import '../../apps/miss-book/assets/css/cmps/book-preview.css';
 @import '../../apps/miss-book/assets/css/cmps/book-filter.css';
 @import '../../apps/miss-book/assets/css/cmps/review-add.css';
+@import '../../apps/miss-book/assets/css/cmps/book-app.css';
 
 /* Setup */
 
