--- a/apps/miss-book/assets/css/basics/base.css
+++ b/apps/miss-book/assets/css/basics/base.css
@@ -30,7 +30,7 @@ button {
     /* box-shadow: 0 0 10px 0 white; */
     background: rgb(70, 129, 70);
     padding: 10px;
-    font-size: 15px;
+    /* font-size: 15px; */
     border-radius: 4px;
     /* color: white; */
     margin-bottom: 10px;
