--- a/apps/miss-book/assets/css/cmps/book-filter.css
+++ b/apps/miss-book/assets/css/cmps/book-filter.css
@@ -8,6 +8,13 @@
     margin-bottom: 10px;
 }
 
+.book-filter button {
+    border: 2px solid white;
+    box-shadow: 0 0 10px 0 white;
+    font-size: 15px;
+    color: white;
+}
+
 .book-filter .search-btn {
     position: fixed;
     bottom: 20px;
