--- a/apps/miss-book/assets/css/basics/base.css
+++ b/apps/miss-book/assets/css/basics/base.css
@@ -26,14 +26,14 @@ img {
 
 button {
     /* border: 2px solid white; */
-    outline: 0;
+    /* outline: 0; */
     /* box-shadow: 0 0 10px 0 white; */
-    background: rgb(70, 129, 70);
-    padding: 10px;
+    /* background: rgb(70, 129, 70); */
+    /* padding: 10px; */
     /* font-size: 15px; */
-    border-radius: 4px;
+    /* border-radius: 4px; */
     /* color: white; */
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
 
 button:hover {
