--- a/apps/miss-book/assets/css/basics/base.css
+++ b/apps/miss-book/assets/css/basics/base.css
@@ -19,9 +19,9 @@ a {
 }
 
 img {
-    height: 100%;
+    /* height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: cover; */
 }
 
 button {
